fixed top bar scrooling again and spacing of the elements.  Also tidied up css

--- a/learning/htmlCssProjects/omnifood/resources/css/queries.css
+++ b/learning/htmlCssProjects/omnifood/resources/css/queries.css
@@ -43,7 +43,7 @@
       font-size: 20px;
       margin-left: 90;
       padding-left: 90;
-      overflow-x: hidden;
+      overflow-x: none;
    }
 }
 
